# lagom

./: README.rst  pyproject.toml  tox.ini
docs/: conf.py  index.rst
lagom/: TRS.py
licenses/: LICENSE.rst
