[project]
name = "lagom"
description = "Just right"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
authors = [
  { name = "bibi", email = "" },
]
dependencies = [
  
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "tomli; python_version <\"3.11\"",
]



[project.urls]
repository = "https://github.com/bprinoth/lagom" 

[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=3.4",
  "wheel",

]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "lagom/version.py"

[tool.pytest.ini_options]
testpaths = [
  "lagom",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "lagom/__init*",
 "lagom/conftest.py",
 "lagom/*setup_package*",
 "lagom/tests/*",
 "lagom/*/tests/*",
 "lagom/extern/*",
 "lagom/version*",
 "*/lagom/__init*",
 "*/lagom/conftest.py",
 "*/lagom/*setup_package*",
 "*/lagom/tests/*",
 "*/lagom/*/tests/*",
 "*/lagom/extern/*",
 "*/lagom/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_", 
]
